--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,4 +2,5 @@ dependencies {
 	implementation("com.google.mlkit:genai-proofreading:1.0.0-beta1")
 	implementation("com.google.mlkit:genai-rewriting:1.0.0-beta1")
 	implementation("com.google.mlkit:genai-summarization:1.0.0-beta1")
+	implementation("com.google.mlkit:genai-image-description:1.0.0-beta1")
 }
